# SceneCraft

./: .gitignore  .gitmodules  LICENSE  README.md  index.html  pyproject.toml
scenecraft/: guidance.py  model.py  pipeline.py  prompt_processor.py  renderer.py  trainer.py  utils.py
scenecraft/configs/: dataparser.py  method.py
scenecraft/data/: datamanager.py  dataset.py
scenecraft/data/hypersim_utils/meta_data/: condition_embedding.npy  hypersim_train.txt  nyu40id.txt
scenecraft/data/scannet_utils/: _batch_load_scannet_data.py  _extract_posed_images_scannet.py  _load_scannet_data.py  scannet.txt
scenecraft/data/scannetpp_utils/: _batch_load_scannetpp_data.py  _extract_bbox.py  _load_scannetpp_data.py
scenecraft/data/scannetpp_utils/meta_data/: enum_labels.jsonl  scannetpp_train.txt  scannetpp_val.txt
scenecraft/entrypoint/: train.py
scenecraft/finetune/: inference_controlnet_sd.py  train_controlnet_sd.py
scenecraft/ops/include/: pytorch_cpp_helper.hpp  pytorch_cuda_helper.hpp  pytorch_device_registry.hpp
scenecraft/ops/voxelize/: voxelization.cpp  voxelization.py  voxelization_cpu.cpp  voxelization_kernel.cu
scripts/: compute_metrics.py  convert_depth_to_normal.py  enumerate_labels.py  generate_caption.sh  generate_depth.py  generate_json.sh  generate_outputs.py  inference_controlnet_sd.sh  layout_tools.py  prepare_dataset.sh  process_generations.py  train_controlnet_sd.sh  upload_model_hf.py
